# RBQ

./: .gitignore  CMakeLists.txt  README.md  run_vision.bash  udp_qr_node.py  실행가이드.txt
RBQ docs/: RBQ_ROS2.txt
RBQ_PC_backup/rbq@192.168.0.10/: RBQ.bash
RBQ_PC_backup/rbq@192.168.0.10/rbq_ws/hw_configs/: QuadWheelParameter.ini
RBQ_PC_backup/rbq@192.168.0.10/rbq_ws/ros2/src/rbq_description/: CMakeLists.txt
RBQ_PC_backup/rbq@192.168.0.10/rbq_ws/ros2/src/rbq_description/launch/: description.launch.py
RBQ_PC_backup/rbq@192.168.0.10/rbq_ws/ros2/src/rbq_description/urdf/: rbq_macro.xacro  slam_rbq.urdf.xacro  slam_rbq10.urdf
RBQ_PC_backup/rbq@192.168.0.10/rbq_ws/ros2/src/rbq_driver/: CMakeLists.txt  package.xml
RBQ_PC_backup/rbq@192.168.0.10/rbq_ws/ros2/src/rbq_driver/src/: NetworkHandler.cpp
RBQ_PC_backup/rbq@192.168.0.10/rbq_ws/ros2/src/rbq_examples/: CMakeLists.txt
RBQ_PC_backup/rbq@192.168.0.10/rbq_ws/ros2/src/rbq_rviz_plugins/: CMakeLists.txt
RBQ_PC_backup/rbq@192.168.0.10/rbq_ws/scripts/: start_motion.bash  start_ros_driver.bash
RBQ_PC_backup/rbq@192.168.0.12/: RBQ.bash
RBQ_PC_backup/rbq@192.168.0.12/rbq_ws/: udev_rules.bash
RBQ_PC_backup/rbq@192.168.0.12/rbq_ws/hw_configs/: Equipment_INFO.ini  ManiParameter.ini
RBQ_PC_backup/rbq@192.168.0.12/rbq_ws/ros2/install/rbq_msgs/share/rbq_msgs/rust/: Cargo.toml
RBQ_PC_backup/rbq@192.168.0.12/rbq_ws/ros2/install/rbq_msgs/share/rbq_msgs/rust/src/: msg.rs
RBQ_PC_backup/rbq@192.168.0.12/rbq_ws/ros2/install/rbq_msgs/share/rbq_msgs/rust/src/msg/: rmw.rs
RBQ_PC_backup/rbq@192.168.0.12/rbq_ws/ros2/install/rbq_rviz_plugins/share/rbq_rviz_plugins/: local_setup.dsv  local_setup.sh  package.dsv  package.xml  package.zsh  plugins_description.xml
RBQ_PC_backup/rbq@192.168.0.12/rbq_ws/ros2/install/rbq_rviz_plugins/share/rbq_rviz_plugins/cmake/: ament_cmake_export_dependencies-extras.cmake  ament_cmake_export_include_directories-extras.cmake  ament_cmake_export_targets-extras.cmake  rbq_rviz_pluginsConfig.cmake  rbq_rviz_pluginsExport-noconfig.cmake
configs/: cyclonedds_ros2.xml
configs/HAL/: config.ini
configs/Handler/: config.ini
configs/Mujoco/: config.json
hw_configs/: QuadParameter.ini
rbq_examples/: CMakeLists.txt  README.md
rbq_examples/scripts/: build.bash  clear.bash  debian-dep.bash  setup.bash
rbq_examples/scripts/docker/: Dockerfile  run.bash
rbq_examples/src/: rbq_example_level_0.cpp  rbq_example_level_1.cpp
rbq_gym/: dependencies.yaml  setup.py
rbq_gym/policy/rbq10/: info.json  policy.onnx
rbq_gym/rbq_gym/: __init__.py  play.py  train.py
rbq_gym/rbq_gym/envs/: __init__.py
rbq_gym/rbq_gym/utils/: helpers.py  keyboard.py  logger.py  math.py  task_registry.py  terrain.py
rbq_gym/scripts/: activate.bash  configure.bash  play.bash  python.bash  setup.bash  train.bash
rbq_lab/: dependencies.yaml  setup.py
rbq_lab/policy/rbq10/: info.json  policy.onnx
rbq_lab/rbq_lab/: __init__.py  play.py  train.py
rbq_lab/rbq_lab/envs/: __init__.py
rbq_lab/rbq_lab/utils/: camera.py  keyboard.py  marker.py  math.py  rough.py
rbq_lab/scripts/: clear.bash  configure.bash  isaacsim.bash  play.bash  setup.bash  train.bash
rbq_sdk/: CMakeLists.txt  README.md
rbq_sdk/cmake/: idl_template.hash.in  rbq_sdkConfig.cmake.in
rbq_sdk/idl/go2/: AudioData_.idl  BmsCmd_.idl  BmsState_.idl  ConfigChangeStatus_.idl  Error_.idl  Go2FrontVideoData_.idl  HeightMap_.idl  IMUState_.idl  InterfaceConfig_.idl  LidarState_.idl  LowCmd_.idl  LowState_.idl  MotorCmd_.idl  MotorCmds_.idl  MotorState_.idl  MotorStates_.idl  PathPoint_.idl  Req_.idl  Res_.idl  SportModeCmd_.idl  SportModeState_.idl  TimeSpec_.idl  UwbState_.idl  UwbSwitch_.idl  VoxelMapCompressed_.idl  WirelessController_.idl
rbq_sdk/idl/rbq/: ArmJointInfo_.idl  BatteryState_.idl  ContactInfo_.idl  DockInfo_.idl  FootStates_.idl  HighLevelCommand_.idl  ImuInfo_.idl  JointInfo_.idl  JointOwnershipCmd_.idl  JointRef_.idl  JointStatus_.idl  JoyInfo_.idl  LV0.idl  LegJointInfo_.idl  MotionRef_.idl  MotorInfo_.idl  MotorStatus_.idl  PduInfo_.idl  RbqConstants_.idl  RobotParameters_.idl  RobotStatus_.idl  SimInfo_.idl  TaskInfo_.idl  UserCommand_.idl  WhlJointInfo_.idl
rbq_sdk/idl/ros2/: Bool_.idl  Char_.idl  Float_.idl  Header_.idl  Imu_.idl  Int8_.idl  JointState_.idl  Joy_.idl  MapMetaData_.idl  OccupancyGrid_.idl  Odometry_.idl  Point32_.idl  PointCloud2_.idl  PointField_.idl  PointStamped_.idl  Point_.idl  Pose2D_.idl  PoseStamped_.idl  PoseWithCovarianceStamped_.idl  PoseWithCovariance_.idl  Pose_.idl  QuaternionStamped_.idl  Quaternion_.idl  String_.idl  Time_.idl  TwistStamped_.idl  TwistWithCovarianceStamped_.idl  TwistWithCovariance_.idl  Twist_.idl  Vector3_.idl
rbq_sdk/include/: Filter.hpp  JointControl.hpp  Policy.hpp  Thread.hpp  Timer.hpp
rbq_sdk/include/dds/: Publisher.hpp  Settings.hpp  Subscriber.hpp  TopicNames.hpp
rbq_sdk/scripts/: build.bash  build_dds.bash
resources/mediamtx/: mediamtx.yml
resources/meshes/env/: Grating.stl
resources/meshes/lims/: Base.stl  Elbow.stl  Forearm.stl  Gripper_Base.stl  Gripper_L.stl  Gripper_R.stl  Link_1.stl  Wrist_2.stl  Wrist_3.stl
resources/meshes/rb1/: Link0.stl  Link1.stl  Link2.stl  Link3.stl  Link4.stl  Link5.stl  Link6.stl
resources/meshes/rbq/: calf.stl  hip3.stl  trunk.stl
resources/model/: README.md  rbq10_with_lims_ex.xml  rbq10_with_rb1.xml  rbq_environment.xml  rbq_lims_environment.xml  rbq_rb1_environment.xml  rbq_wheel_environment.xml
resources/model/env/: door.xml  environment.xml  environment_arm.xml
resources/model/rbq/: rbq.xml  rbq_lims.xml  rbq_rb1.xml  rbq_wheel.xml  rbq_wheel_7inch.xml
resources/policy/rbq10_trot/: info.json  policy.onnx
resources/urdf/: rbq10.urdf
ros2/install/: local_setup.sh  setup.sh
ros2/src/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
ros2/src/rbq_description/: package.xml
ros2/src/rbq_examples/: package.xml
scripts/: deploy.bash  sim.bash  start_gui.bash  start_mediamtx.bash  start_mujoco.bash  start_ptp_master.bash  start_ros_ublox.bash  start_rqt.bash  start_rviz.bash  start_vision.bash
(+637 files in other folders)
