[package]
name = "rbq_msgs"
version = "0.1.1"
edition = "2021"

[dependencies]
rosidl_runtime_rs = "0.6"
serde = { version = "1", optional = true, features = ["derive"] }
serde-big-array = { version = "0.5.1", optional = true }

# ROS Dependencies
sensor_msgs = "*"
std_msgs = "*"
builtin_interfaces = "*"
geometry_msgs = "*"

[features]
serde = ['dep:serde', 'dep:serde-big-array', 'rosidl_runtime_rs/serde', 'sensor_msgs/serde', 'std_msgs/serde', 'builtin_interfaces/serde', 'geometry_msgs/serde']

[package.metadata.rclrs]
reexport = true
